Fixed card spacing so that cards go right to edge of row comp but still have grid spacing between cards

--- a/src/styles/components/_card.scss
+++ b/src/styles/components/_card.scss
@@ -26,7 +26,7 @@
 }
 
 .card-grid-spacing {
-    padding: 1rem 1rem 1rem 1rem;
+    padding: 0;
 
     @include breakpoints.respond('phone') {
         padding: 1rem 0rem 1rem 0rem;
